compiler/e2e/test/snapshot/term/where_clause/unexpected_type_equality/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: the left-hand side of the type equality predicate must be a trait associated type
  ╭─ compiler/e2e/test/snapshot/term/where_clause/unexpected_type_equality/main.pnx:7:9
  │
7 │         T = Identity[T]::Output
  │         ^

error: Compilation aborted due to 1 error(s)



stdout:
